--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -13,24 +13,28 @@
             <img class="dof42" height="110px" src="./resources/day_of_the_42.png"  alt="">
             <div class="hright">
                 <img class="loupe" src="./resources/loupe.png"  alt="">
-                <img class="reload" src="./resources/reload.png"  alt="">
-                <img class="cross" src="./resources/close.gif"  alt="">
+                <a href="https://www.disney.com"><img class="reload" src="./resources/reload.png" title="Recommencer au début" alt="Recommencer au début"></a>
+                <a href="https://www.relaischateaux.com"><img class="cross" src="./resources/close.gif" title="Déconnecter" alt="Déconnecter"></a>
             </div>
         </header>
         <div class="middle">
             <div class="float col-left rad shadow">
-                <img class="arrow" src="resources/arrow.png" alt="">
-                <img class="hand" src="./resources/main.png" alt="">
-                <img style="border: 5px solid red; border-radius: 10px;" class="eye" src="./resources/oeil.png" alt="">
-                <img class="tool" src="./resources/outil.png" alt="">
-                <img class="cluster" src="./resources/chat-icon.png" alt="">
+                <img class="arrow" src="resources/arrow.png" title="Avancer" alt="Avancer">
+                <img class="hand" src="./resources/main.png" title="Prendre" alt="Prendre">
+                <img class="eye" src="./resources/oeil.png"  title="Regarder" alt="Regarder">
+                <img class="tool" src="./resources/outil.png" title="Utiliser" alt="Utiliser">
+                <img class="cluster" src="./resources/chat-icon.png" title="Parler" alt="Parler">
             </div>
             <div class="float main rad shadow">
-                <img class="cluster" src="./resources/cluster.jpg" alt="">
+                <img class="cluster" src="./resources/cluster.jpg" alt="cluster" usemap="#clustermap">
+                <map name="clustermap">
+                    <area shape="rect" coords="322, 322, 470, 550" alt="Ikea" title="Ikea" href="https://www.ikea.com">
+                    <area shape="rect" coords="780, 310, 990, 490" alt="Apple" title="Apple" href="https://www.apple.com">
+                </map>
             </div>
             <div class="float col-right rad shadow">
-                <img class="book" width="75px" src="resources/book.png" alt="">
-                <img class="towel" width="75px" src="./resources/towel.png" alt="">
+                <img class="book" width="75px" src="resources/book.png" alt="Livre">
+                <img class="towel" width="75px" src="./resources/towel.png" alt="Gant de toilette">
                 <div class="brick"></div>
             </div>
         </div>
