--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -1,53 +1,67 @@
 <style>
-        html {
-            margin: 0;
-            padding: 0;
-            background: url("http://hdqwalls.com/wallpapers/galaxy-dark-space-cb.jpg") no-repeat;
-            background-size: cover;
-            color: white;
-        }
+    html {
+        margin: 0;
+        padding: 0;
+        background: url("http://hdqwalls.com/wallpapers/galaxy-dark-space-cb.jpg") no-repeat;
+        background-size: cover;
+    }
 
 
-        p {
-            text-align: center;
-        }
+    p {
+        text-align: center;
+    }
 
-        table {
-            width: 100%;
-        }
+    table {
+        width: 100%;
+    }
 
-        td {
-            border-radius: 2%;
-            width: 5%;
-        }
+    td {
+        border-radius: 2%;
+        width: 5%;
+    }
 
-        td h2 {
-            text-align: center;
-        }
-        
-        .mass {
-            text-align: right;
-            margin: 2%;
-        }
+    td h2 {
+        text-align: center;
+    }
+    
+    .mass {
+        text-align: right;
+        margin: 2%;
+    }
 
-        .num {
-            text-align: left;
-            margin: 2%;
-        }
+    .num {
+        text-align: left;
+        margin: 2%;
+    }
 
-        .title {
-            text-align: center;
-            color: white;
-        }
+    .title {
+        text-align: center;
+        color: white;
+    }
 
-        .green{background-color: hsla(120, 37%, 47%, 0.507);}
-        .greenmore{background-color: hsla(120, 38%, 18%, 0.507);}
-        .grey{background-color: rgba(88, 88, 88, 0.603);}
-        .red{background-color: rgba(167, 70, 70, 0.616);}
-        .salmon{background-color: rgba(172, 128, 128, 0.616);}
-        .blue{background-color: rgba(70, 136, 167, 0.616);}
-        .purple{background-color: rgba(108, 90, 138, 0.616);}
-        .orange{background-color: rgba(168, 140, 78, 0.616);}
+    .green{background-color: hsla(120, 37%, 47%, 0.507);}
+    .greenmore{background-color: hsla(120, 38%, 18%, 0.507);}
+    .grey{background-color: rgba(88, 88, 88, 0.603);}
+    .cleargrey{background-color: rgba(145, 145, 145, 0.603);}
+    .red{background-color: rgba(167, 70, 70, 0.616);}
+    .pink{background-color: rgba(156, 95, 139, 0.616);}
+    .salmon{background-color: rgba(172, 128, 128, 0.616);}
+    .blue{background-color: rgba(70, 136, 167, 0.616);}
+    .purple{background-color: rgba(108, 90, 138, 0.616);}
+    .orange{background-color: rgba(168, 140, 78, 0.616);}
+    .darkblue{background-color: rgba(37, 76, 94, 0.616);}
+
+    .green:hover{background-color: hsla(120, 37%, 47%, 0.8);}
+    .greenmore:hover{background-color: hsla(120, 38%, 18%, 0.8);}
+    .grey:hover{background-color: rgba(88, 88, 88, 0.8);}
+    .cleargrey:hover{background-color: rgba(145, 145, 145, 0.8);}
+    .red:hover{background-color: rgba(167, 70, 70, 0.8);}
+    .salmon:hover{background-color: rgba(172, 128, 128, 0.8);}
+    .pink:hover{background-color: rgba(156, 95, 139, 0.8);}
+    .blue:hover{background-color: rgba(70, 136, 167, 0.8);}
+    .darkblue:hover{background-color: rgba(37, 76, 94, 0.8);}
+    .purple:hover{background-color: rgba(108, 90, 138, 0.8);}
+    .orange:hover {background-color: rgba(168, 140, 78, 0.8);} 
 </style>
 <!DOCTYPE html>
 <html lang="en">
@@ -99,7 +113,7 @@
             <td class="orange"><p class="mass">​58.933</p><h2>Co</h2><p class="num">27</p></td>
             <td class="orange"><p class="mass">​58.693</p><h2>Ni</h2><p class="num">28</p></td>
             <td class="orange"><p class="mass">​63.546</p><h2>Cu</h2><p class="num">29</p></td>
-            <td class="orange"><p class="mass">​65.38</p><h2>Zn</h2><p class="num">30</p></td>
+            <td class="purple"><p class="mass">​65.38</p><h2>Zn</h2><p class="num">30</p></td>
             <td class="purple"><p class="mass">​69.723</p><h2>Ga</h2><p class="num">31</p></td>
             <td class="greenmore"><p class="mass">​72.630</p><h2>Ge</h2><p class="num">32</p></td>
             <td class="greenmore"><p class="mass">74.922</p><h2>As</h2><p class="num">33</p></td>
@@ -119,7 +133,7 @@
             <td class="orange"><p class="mass">102.91</p><h2>Rh</h2><p class="num">45</p></td>
             <td class="orange"><p class="mass">106.42</p><h2>Pd</h2><p class="num">46</p></td>
             <td class="orange"><p class="mass">107.87</p><h2>Ag</h2><p class="num">47</p></td>
-            <td class="orange"><p class="mass">112.41</p><h2>Cd</h2><p class="num">48</p></td>
+            <td class="purple"><p class="mass">112.41</p><h2>Cd</h2><p class="num">48</p></td>
             <td class="purple"><p class="mass">114.82</p><h2>In</h2><p class="num">49</p></td>
             <td class="purple"><p class="mass">118.71</p><h2>Sn</h2><p class="num">50</p></td>
             <td class="greenmore"><p class="mass">121.76</p><h2>Sb</h2><p class="num">51</p></td>
@@ -130,7 +144,7 @@
         <tr>
             <td class="grey"><p class="mass">​132.91</p><h2>Cs</h2><p class="num">55</p></td>
             <td class="red"><p class="mass">137.33</p><h2>Ba</h2><p class="num">56</p></td>
-            <td class="orange"><p>Lanthanides</p><h2>57-71</h2></td>
+            <td class="pink"><h2>57-71</h2></td>
             <td class="orange"><p class="mass">178.49</p><h2>Hf</h2><p class="num">72</p></td>
             <td class="orange"><p class="mass">​180.95</p><h2>Ta</h2><p class="num">73</p></td>
             <td class="orange"><p class="mass">​183.84</p><h2>W</h2><p class="num">74</p></td>
@@ -139,7 +153,7 @@
             <td class="orange"><p class="mass">192.22</p><h2>Ir</h2><p class="num">77</p></td>
             <td class="orange"><p class="mass">195.08</p><h2>Pt</h2><p class="num">78</p></td>
             <td class="orange"><p class="mass">196.97</p><h2>Au</h2><p class="num">79</p></td>
-            <td class="orange"><p class="mass">​200.59</p><h2>Hg</h2><p class="num">80</p></td>
+            <td class="purple"><p class="mass">​200.59</p><h2>Hg</h2><p class="num">80</p></td>
             <td class="purple"><p class="mass">204.38</p><h2>Ti</h2><p class="num">81</p></td>
             <td class="purple"><p class="mass">207.2</p><h2>Pb</h2><p class="num">82</p></td>
             <td class="purple"><p class="mass">​208.98</p><h2>Bi</h2><p class="num">83</p></td>
@@ -150,58 +164,58 @@
         <tr>
             <td class="grey"><p class="mass">​[223]</p><h2>Fr</h2><p class="num">87</p></td>
             <td class="red"><p class="mass">​[226]</p><h2>Ra</h2><p class="num">88</p></td>
-            <td class="orange"><p>Actinides</p><h2>89-103</h2></td>
+            <td class="darkblue"><h2>89-103</h2></td>
             <td class="orange"><p class="mass">​[267]</p><h2>Rf</h2><p class="num">104</p></td>
             <td class="orange"><p class="mass">​[268]</p><h2>Db</h2><p class="num">105</p></td>
             <td class="orange"><p class="mass">[269]</p><h2>Sg</h2><p class="num">106</p></td>
             <td class="orange"><p class="mass">​[270]</p><h2>Bh</h2><p class="num">107</p></td>
-            <td class="orange"><p class="mass">[270]]</p><h2>Hs</h2><p class="num">108</p></td>
-            <td class="orange"><p class="mass">​[278]</p><h2>Mt</h2><p class="num">109</p></td>
-            <td class="orange"><p class="mass">​[281]</p><h2>Ds</h2><p class="num">110</p></td>
-            <td class="orange"><p class="mass">​[282]</p><h2>Rg</h2><p class="num">111</p></td>
-            <td class="orange"><p class="mass">​[285]</p><h2>Cn</h2><p class="num">112</p></td>
-            <td class="purple"><p class="mass">​[286]</p><h2>Nh</h2><p class="num">113</p></td>
-            <td class="purple"><p class="mass">​[289]</p><h2>Fl</h2><p class="num">114</p></td>
-            <td class="purple"><p class="mass">[290]</p><h2>Mc</h2><p class="num">115</p></td>
-            <td class="greenmore"><p class="mass">​[293]</p><h2>Lv</h2><p class="num">116</p></td>
-            <td class="blue"><p class="mass">​[294]</p><h2>Ts</h2><p class="num">117</p></td>
-            <td class="salmon"><p class="mass">​[294]</p><h2>Og</h2><p class="num">118</p></td>
+            <td class="orange"><p class="mass">[270]</p><h2>Hs</h2><p class="num">108</p></td>
+            <td class="cleargrey"><p class="mass">​[278]</p><h2>Mt</h2><p class="num">109</p></td>
+            <td class="cleargrey"><p class="mass">​[281]</p><h2>Ds</h2><p class="num">110</p></td>
+            <td class="cleargrey"><p class="mass">​[282]</p><h2>Rg</h2><p class="num">111</p></td>
+            <td class="purple"><p class="mass">​[285]</p><h2>Cn</h2><p class="num">112</p></td>
+            <td class="cleargrey"><p class="mass">​[286]</p><h2>Nh</h2><p class="num">113</p></td>
+            <td class="cleargrey"><p class="mass">​[289]</p><h2>Fl</h2><p class="num">114</p></td>
+            <td class="cleargrey"><p class="mass">[290]</p><h2>Mc</h2><p class="num">115</p></td>
+            <td class="cleargrey"><p class="mass">​[293]</p><h2>Lv</h2><p class="num">116</p></td>
+            <td class="cleargrey"><p class="mass">​[294]</p><h2>Ts</h2><p class="num">117</p></td>
+            <td class="cleargrey"><p class="mass">​[294]</p><h2>Og</h2><p class="num">118</p></td>
         </tr>
         <tr>
             <td colspan="3" class="no_border"></td>
-            <td class="orange"><p class="mass">​138.91</p><h2>La</h2><p class="num">57</p></td>
-            <td class="orange"><p class="mass">140.12</p><h2>Ce</h2><p class="num">58</p></td>
-            <td class="orange"><p class="mass">140.91</p><h2>Pr</h2><p class="num">59</p></td>
-            <td class="orange"><p class="mass">144.24</p><h2>Nd</h2><p class="num">60</p></td>
-            <td class="orange"><p class="mass">​[145]</p><h2>Pm</h2><p class="num">61</p></td>
-            <td class="orange"><p class="mass">​150.36</p><h2>Sm</h2><p class="num">62</p></td>
-            <td class="orange"><p class="mass">​151.96</p><h2>Eu</h2><p class="num">63</p></td>
-            <td class="orange"><p class="mass">157.25</p><h2></h2><p class="num">64</p></td>
-            <td class="orange"><p class="mass">158.93</p><h2>Cn</h2><p class="num">65</p></td>
-            <td class="purple"><p class="mass">162.50</p><h2>Nh</h2><p class="num">66</p></td>
-            <td class="purple"><p class="mass">164.93</p><h2>Fl</h2><p class="num">67</p></td>
-            <td class="purple"><p class="mass">167.26</p><h2>Mc</h2><p class="num">68</p></td>
-            <td class="greenmore"><p class="mass">168.93</p><h2>Lv</h2><p class="num">69</p></td>
-            <td class="blue"><p class="mass">173.05</p><h2>Ts</h2><p class="num">70</p></td>
-            <td class="salmon"><p class="mass">174.97</p><h2>Og</h2><p class="num">71</p></td>
+            <td class="pink"><p class="mass">​138.91</p><h2>La</h2><p class="num">57</p></td>
+            <td class="pink"><p class="mass">140.12</p><h2>Ce</h2><p class="num">58</p></td>
+            <td class="pink"><p class="mass">140.91</p><h2>Pr</h2><p class="num">59</p></td>
+            <td class="pink"><p class="mass">144.24</p><h2>Nd</h2><p class="num">60</p></td>
+            <td class="pink"><p class="mass">​[145]</p><h2>Pm</h2><p class="num">61</p></td>
+            <td class="pink"><p class="mass">​150.36</p><h2>Sm</h2><p class="num">62</p></td>
+            <td class="pink"><p class="mass">​151.96</p><h2>Eu</h2><p class="num">63</p></td>
+            <td class="pink"><p class="mass">157.25</p><h2>Gd</h2><p class="num">64</p></td>
+            <td class="pink"><p class="mass">158.93</p><h2>Tb</h2><p class="num">65</p></td>
+            <td class="pink"><p class="mass">162.50</p><h2>Dy</h2><p class="num">66</p></td>
+            <td class="pink"><p class="mass">164.93</p><h2>Ho</h2><p class="num">67</p></td>
+            <td class="pink"><p class="mass">167.26</p><h2>Er</h2><p class="num">68</p></td>
+            <td class="pink"><p class="mass">168.93</p><h2>Tm</h2><p class="num">69</p></td>
+            <td class="pink"><p class="mass">173.05</p><h2>Yb</h2><p class="num">70</p></td>
+            <td class="pink"><p class="mass">174.97</p><h2>Lu</h2><p class="num">71</p></td>
         </tr>
         <tr>
             <td colspan="3" class="no_border"></td>
-            <td class="orange"><p class="mass">​[227]</p><h2>Ac</h2><p class="num">89</p></td>
-            <td class="orange"><p class="mass">​232.04</p><h2>Th</h2><p class="num">90</p></td>
-            <td class="orange"><p class="mass">​231.04</p><h2>Pa</h2><p class="num">91</p></td>
-            <td class="orange"><p class="mass">​238.03</p><h2>U</h2><p class="num">92</p></td>
-            <td class="orange"><p class="mass">[237]</p><h2>Np</h2><p class="num">93</p></td>
-            <td class="orange"><p class="mass">​[244]</p><h2>Pu</h2><p class="num">94</p></td>
-            <td class="orange"><p class="mass">​[243]</p><h2>Am</h2><p class="num">95</p></td>
-            <td class="orange"><p class="mass">​[247]</p><h2>Cm</h2><p class="num">96</p></td>
-            <td class="orange"><p class="mass">​[247]</p><h2>Bk</h2><p class="num">97</p></td>
-            <td class="purple"><p class="mass">​[251]</p><h2>Cf</h2><p class="num">98</p></td>
-            <td class="purple"><p class="mass">[252]]</p><h2>Es</h2><p class="num">99</p></td>
-            <td class="purple"><p class="mass">​[257]</p><h2>Fm</h2><p class="num">100</p></td>
-            <td class="greenmore"><p class="mass">​[258]</p><h2>Md</h2><p class="num">101</p></td>
-            <td class="blue"><p class="mass">​[259]</p><h2>No</h2><p class="num">102</p></td>
-            <td class="salmon"><p class="mass">[266]</p><h2>Lr</h2><p class="num">103</p></td>
+            <td class="darkblue"><p class="mass">​[227]</p><h2>Ac</h2><p class="num">89</p></td>
+            <td class="darkblue"><p class="mass">​232.04</p><h2>Th</h2><p class="num">90</p></td>
+            <td class="darkblue"><p class="mass">​231.04</p><h2>Pa</h2><p class="num">91</p></td>
+            <td class="darkblue"><p class="mass">​238.03</p><h2>U</h2><p class="num">92</p></td>
+            <td class="darkblue"><p class="mass">[237]</p><h2>Np</h2><p class="num">93</p></td>
+            <td class="darkblue"><p class="mass">​[244]</p><h2>Pu</h2><p class="num">94</p></td>
+            <td class="darkblue"><p class="mass">​[243]</p><h2>Am</h2><p class="num">95</p></td>
+            <td class="darkblue"><p class="mass">​[247]</p><h2>Cm</h2><p class="num">96</p></td>
+            <td class="darkblue"><p class="mass">​[247]</p><h2>Bk</h2><p class="num">97</p></td>
+            <td class="darkblue"><p class="mass">​[251]</p><h2>Cf</h2><p class="num">98</p></td>
+            <td class="darkblue"><p class="mass">[252]</p><h2>Es</h2><p class="num">99</p></td>
+            <td class="darkblue"><p class="mass">​[257]</p><h2>Fm</h2><p class="num">100</p></td>
+            <td class="darkblue"><p class="mass">​[258]</p><h2>Md</h2><p class="num">101</p></td>
+            <td class="darkblue"><p class="mass">​[259]</p><h2>No</h2><p class="num">102</p></td>
+            <td class="darkblue"><p class="mass">[266]</p><h2>Lr</h2><p class="num">103</p></td>
         </tr>
     </table>
 </body>
