--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -23,7 +23,7 @@
                 <img class="hand" src="./resources/main.png" title="Prendre" alt="Prendre">
                 <img class="eye" src="./resources/oeil.png"  title="Regarder" alt="Regarder">
                 <img class="tool" src="./resources/outil.png" title="Utiliser" alt="Utiliser">
-                <img class="cluster" src="./resources/chat-icon.png" title="Parler" alt="Parler">
+                <img class="chat" src="./resources/chat-icon.png" title="Parler" alt="Parler">
             </div>
             <div class="float main rad shadow">
                 <img class="cluster" src="./resources/cluster.jpg" alt="cluster" usemap="#clustermap">
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="greenbox rad shadow">
-            <p>Vous <span class="enter">entrez</span> alors dans une grande pièce remplie <span class="shatxt">d'ordinateurs</span>...<br>
+            <p>Vous <span class="enter">entrez</span> alors dans une grande pièce remplie <br/><span class="shatxt">d'ordinateurs</span>...<br>
                 <i>- Bonjour, vous êtes nouveau ici ?</i></p>
             <form action="#">
                 <input type="text">
