--- a/d04/ex01/index.html
+++ b/d04/ex01/index.html
@@ -6,7 +6,7 @@
 </head>
 <html>
   <body>
-    <form action="create.php" method="post">
+    <form action="create.php" method="POST">
         <h1>Create an account</h1>
         <input type="text" class="form-control" name="login" id="login" placeholder="Username">
         <input type="password" class="form-control" name="passwd" id="passwd" placeholder="Password">
