--- a/d09/ex02/index.html
+++ b/d09/ex02/index.html
@@ -39,13 +39,13 @@
         left: 50%;
         top: 45%;
         transform: translate(-50%, -50%);
-        background-color: rgba(0, 0, 0, 0.493);
+        background-color: rgba(0, 0, 0, 0.856);
         border-radius: 4px;
         position: absolute;
     }
 
     #new {
-        float: right;
+        float: left;
     }
 
     #toDo {
@@ -58,9 +58,9 @@
 </style>
 <body>
     <h1 style="color:white">Tout doux liste</h1>
+    <input id="new" type="button" value="New">
     <div id="ft_list">
-        <input id="new" type="button" value="New">
-        <div id="toDo"></div>
+        
     </div>
     <div id="confirmation">
         Êtes-vous sûr de vouloir supprimer cette douceur ?
